Bug #29993 Default value of log_output should be 'FILE', not 'TABLE'
Submitted: 24 Jul 2007 1:11 Modified: 18 Dec 2007 22:21
Reporter: Konstantin Osipov
Status: Closed
Category:Server: Logging Severity:S1 (Critical)
Version:5.1 OS:Any
Assigned to: Bugs System Target Version:5.1.23
Triage: D1 (Critical)

[24 Jul 2007 1:11] Konstantin Osipov
Description:
The default value of log_output should be 'FILE', not 'TABLE'.
This is a request for backward compatibility from 5.0 coming from Dev-MT.

How to repeat:
mysql> set global log_output=default;
Query OK, 0 rows affected (0.00 sec)

mysql> select @@log_output;
+--------------+
| @@log_output |
+--------------+
| TABLE        | 
+--------------+
1 row in set (0.00 sec)

Suggested fix:
Change the default.
[24 Jul 2007 6:01] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/31459

ChangeSet@1.2553, 2007-07-23 22:01:22-06:00, malff@weblab.(none) +2 -0
  Bug#29993 (Default value of log_output should be 'FILE', not 'TABLE')
  
  Changed the default location of the log output to LOG_FILE,
  for backward compatibility with MySQL 5.0
[25 Jul 2007 10:48] Bugs System
Pushed into 5.1.21-beta
[28 Jul 2007 0:54] Paul DuBois
Noted in 5.1.21 changelog.

Incompatible change: In MySQL 5.1.6, when log tables were
implemented, the default log destination for the general query and
slow query log was TABLE. This default has been changed to FILE,
which is compatible with MySQL 5.0, but incompatible with earlier
releases of MySQL 5.1 from 5.1.6 to 5.1.20. If you are upgrading from
MySQL 5.0 to this release, no logging option changes should be
necessary. However, if you are upgrading from 5.1.6 through 5.1.20 to
this release and were using TABLE logging, use the --log-output=TABLE
option explicitly to preserve your server's table-logging behavior.

Also updated the upgrading instructions and the log tables section
accordingly.
[27 Nov 2007 23:45] Tobias Asplund
in 5.1.22 on both Windows and Mac OS X the default is still set to TABLE.
[11 Dec 2007 1:49] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/39684

ChangeSet@1.2681, 2007-12-10 19:49:18-05:00, dkatz@damien-katzs-computer.local +1 -0
  Bug #29993	Default value of log_output should be 'FILE', not 'TABLE'
  
  Ensure default logging is "file" logging.
[16 Dec 2007 12:43] Bugs System
Pushed into 5.1.23-rc
[16 Dec 2007 12:44] Bugs System
Pushed into 6.0.5-alpha
[18 Dec 2007 22:21] Paul DuBois
Noted in 5.1.23, 6.0.5 changelogs.