Bug #29993	Default value of log_output should be 'FILE', not 'TABLE'

Ensure default logging is "file" logging, for additional ways the option can be turned on. Verified on OS X, but not tested automatically.